<resources>
    <string name="app_name">PokeApp</string>
    <string name="Estado1">Tipo Dragon</string>
    <string name="Estado2">Tipo Fuego</string>
    <string name="Estado3">Tipo Electrico</string>
    <string name="Estado4">Tipo Agua</string>
    <string name="Estado5">Tipo Hielo</string>
    <string name="Estado6">Tipo Siniestro</string>
    <string name="EstadoSelect">Elementos de Pokemones:</string>
    <string name="LtDra">Pokemones Tipo Dragon</string>
    <string name="LtFue">Pokemon Tipo Fuego</string>
    <string name="LtElec">Pokemones Tipo Electrico</string>
    <string name="LtAgu">Pokemones Tipo Agua</string>
    <string name="LtHie">Pokemones Tipo Hielo</string>
    <string name="LtSin">Pokemones Tipo Siniestro</string>
    <string name="TipoPokeDra1">Rayquaza</string>
    <string name="TipoPokeDra2">Palkia</string>
    <string name="TipoPokeDra3">Reshiram</string>
    <string name="TipoPokeDra4">Zekrom</string>
    <string name="TipoPokeDra5">Kyurem</string>
    <string name="TipoPokeDra6">Giratina</string>
    <string name="TipoPokeFue1">Charizard</string>
    <string name="TipoPokeFue2">Ho-oh</string>
    <string name="TipoPokeFue3">Entei</string>
    <string name="TipoPokeFue4">Moltres</string>
    <string name="TipoPokeFue5">Volcanion</string>
    <string name="TipoPokeFue6">Blaziken</string>
    <string name="TipoPokeElec1">Zapdos</string>
    <string name="TipoPokeElec2">Raikou</string>
    <string name="TipoPokeElec3">Pikachu</string>
    <string name="TipoPokeElec4">Electrivire</string>
    <string name="TipoPokeElec5">Zeaora</string>
    <string name="TipoPokeElec6">tapu koko</string>
    <string name="TipoPokeAgu1">Kyogre</string>
    <string name="TipoPokeAgu2">Suicune</string>
    <string name="TipoPokeAgu3">Feraligatr</string>
    <string name="TipoPokeAgu4">Greninja</string>
    <string name="TipoPokeAgu5">Sharpedo</string>
    <string name="TipoPokeAgu6">Lapras</string>
    <string name="TipoPokeHie1">Regice</string>
    <string name="TipoPokeHie2">Articuno</string>
    <string name="TipoPokeHie3">Mamoswine</string>
    <string name="TipoPokeHie4">Abomasnow</string>
    <string name="TipoPokeHie5">Glaceon</string>
    <string name="TipoPokeHie6">Beartic</string>
    <string name="TipoPokeSin1">Yveltal</string>
    <string name="TipoPokeSin2">Zarude</string>
    <string name="TipoPokeSin3">Tyranitar</string>
    <string name="TipoPokeSin4">Darkrai</string>
    <string name="TipoPokeSin5">Umbreon</string>
    <string name="TipoPokeSin6">Hydreigon</string>
    <string name="TextoTipoDragon1">Rayquaza ha vivido en la capa de ozono durante millones de años, alimentándose de meteoritos. La energía de estos meteoritos se acumula en su cuerpo y le permite megaevolucionar. Dicen que Rayquaza ha vivido durante millones de años. Las leyendas cuentan que puso fin al continuo enfrentamiento entre Groudon y Kyogre.</string>
    <string name="TextoTipoDragon2">Un legendario pájaro Pokémon que tiene la habilidad de controlar el fuego. Dicen que, si resulta herido, se sumerge en el magma de un volcán para arder y curarse. Es uno de los legendarios pájaros Pokémon.</string>
    <string name="TextoTipoDragon3">Pokémon legendario capaz de abrasar el mundo con sus llamas. Ayuda a quienes persiguen un mundo veraz.</string>
    <string name="TextoTipoDragon4">Zekrom es un Pokémon legendario de tipo dragón/eléctrico introducido en la quinta generación. Es la mascota del videojuego Pokémon Blanco. También es la contraparte de Reshiram.</string>
    <string name="TextoTipoDragon5">Sharpedo es un Pokémon de tipo agua/siniestro introducido en la tercera generación. Es la forma evolucionada de Carvanha, a partir de Pokémon Rubí Omega y Pokémon Zafiro Alfa puede megaevolucionar en Mega-Sharpedo.</string>
    <string name="TextoTipoDragon6">Giratina es un Pokémon legendario de tipo fantasma/dragón introducido en la cuarta generación. Es el encargado de proteger el Mundo Distorsión y la mascota del videojuego Pokémon Platino. Forma parte del trío dragón.</string>
    <string name="TextoTipoFuego1">Se trata de un pokémon tipo Fuego/Volador, que aparece por primera vez en Pokémon Red y Blue (rojo y azul), donde puede ser obtenido si el jugador elige como pokémon inicial a Charmander y lo lleva hasta el nivel 36, donde evoluciona a Charizard habiendo pasado con anterioridad por Charmeleon a nivel 16.</string>
    <string name="TextoTipoFuego2">El plumaje de Ho-Oh contiene siete colores que pueden apreciarse según el ángulo desde el que les dé la luz. Dicen que sus plumas dan felicidad a quienes las llevan y, también, que este Pokémon vive a los pies del arco iris.</string>
    <string name="TextoTipoFuego3">Entei es un Pokémon legendario de tipo fuego introducido en la segunda generación. Es uno de los tres perros legendarios junto con Raikou y Suicune. Por su forma de captura en los videojuegos, es un Pokémon errante.</string>
    <string name="TextoTipoFuego4">Es un legendario pájaro Pokémon que tiene la habilidad de controlar el fuego. Dicen que, si resulta herido, se sumerge en el magma de un volcán para arder y curarse. Es uno de los legendarios pájaros Pokémon.</string>
    <string name="TextoTipoFuego5">Expulsa vapor y desaparece entre la densa niebla. Dicen que habita en montañas solitarias. Expulsa vapor de agua por los brazos que tiene en la espalda.</string>
    <string name="TextoTipoFuego6">Blaziken es un Pokémon de tipo fuego/lucha introducido en la tercera generación. Es la evolución de Combusken. Se trata de un Pokémon adelantado, a partir de la sexta generación puede megaevolucionar en Mega-Blaziken.</string>
    <string name="TextoTipoElectrico1">Zapdos es un legendario pájaro Pokémon que tiene la habilidad de controlar la electricidad. Suele vivir en nubarrones. Este Pokémon gana mucha fuerza si le alcanzan los rayos. Es un legendario pájaro Pokémon que tiene la habilidad de controlar la electricidad.</string>
    <string name="TextoTipoElectrico2">Raikou es un Pokémon legendario del tipo eléctrico introducido en la segunda generación. Es uno de los tres perros legendarios junto con Suicune y Entei. Por su forma de captura en los videojuegos, es un Pokémon errante.</string>
    <string name="TextoTipoElectrico3">Pikachu es un Pokémon de tipo eléctrico introducido en la primera generación. Es el Pokémon más conocido de la historia, mayormente por ser el acompañante del protagonista del anime, Ash Ketchum y la mascota representante de la franquicia Pokémon. Es el Pokémon inicial de Pokémon Amarillo y Pokémon:</string>
    <string name="TextoTipoElectrico4">Electivire es un Pokémon de tipo eléctrico introducido en la cuarta generación. Es la evolución de Electabuzz y la contraparte de Magmortar. Es un Pokémon adelantado.</string>
    <string name="TextoTipoElectrico5">Se acerca a su enemigo de forma tan súbita como la caída de un rayo, y lo hace trizas con sus afiladas garras. Hace jirones al oponente con sus garras electrificadas. Aunque este esquive los golpes, acaba electrocutado por las descargas.</string>
    <string name="TextoTipoElectrico6">El espíritu guardián de Melemele, capaz de blandir el rayo. Su eterna curiosidad le lleva a veces a mostrarse ante las personas. Aunque se le considera un espíritu guardián, obra también como espíritu vengativo contra las personas y Pokémon que desatan su ira.</string>
    <string name="TextoTipoAgua1">A Kyogre siempre se le ha descrito como el Pokémon que expandió los océanos. Varias leyendas cuentan que libró combates contra Groudon en repetidas ocasiones para tener el control de la energía de la naturaleza.</string>
    <string name="TextoTipoAgua2">Suicune emana la pureza de los manantiales. Suele corretear por el campo con gran elegancia. Este Pokémon tiene el poder de purificar el agua contaminada. Suicune emana la pureza de los manantiales.</string>
    <string name="TextoTipoAgua3">Feraligatr intimida a sus oponentes abriendo las grandes fauces que tiene. En combate, golpea el suelo bruscamente con las gruesas y fuertes patas traseras que tiene para cargar contra su rival a una velocidad de vértigo. Feraligatr intimida a sus oponentes abriendo las grandes fauces que tiene.</string>
    <string name="TextoTipoAgua4">Comprime el agua y crea estrellas ninja con las que ataca al enemigo. Cuando las hace girar a gran velocidad cortan en dos hasta el metal. Aparece y desaparece de improvisto, cual ninja. Marea al oponente con su soberbia agilidad y lo hace trizas con sus Shuriken de Agua.</string>
    <string name="TextoTipoAgua5">Sharpedo es un Pokémon de tipo agua/siniestro introducido en la tercera generación. Es la forma evolucionada de Carvanha, a partir de Pokémon Rubí Omega y Pokémon Zafiro Alfa puede megaevolucionar en Mega-Sharpedo.</string>
    <string name="TextoTipoAgua6">Este Pokémon posee una notable inteligencia y un corazón de oro. Entona un canto melodioso mientras surca el mar. Surca los mares tranquilamente y destroza los icebergs que encuentra a su paso formando a su alrededor un gran anillo de cristales de hielo.</string>
    <string name="TextoTipoHielo1">ERegice, el Pokémon iceberg. Formado en la Edad de Hielo, su cuerpo se mantiene a una temperatura de 40 bajo cero y no puede ser derretido ni por el fuego. HA: Regice, el Pokémon Iceberg. Nacido en la era del hielo, su cuerpo se mantiene a una temperatura de mas de 100° bajo cero y no se derrite ni con el fuego.24 ene 2022</string>
    <string name="TextoTipoHielo2">Articuno es un legendario pájaro Pokémon que puede controlar el hielo. El batir de sus alas congela el aire. Dicen que consigue hacer que nieve cuando vuela. Es un legendario pájaro Pokémon que puede controlar el hielo.</string>
    <string name="TextoTipoHielo3">Mamoswine, el Pokémon dos colmillos y forma evolucionada de Piloswine. Sus características son largos colmillos y peso 5 veces el del Piloswine. Es díficil encontrarlo desde el final de la Era Glaciar.</string>
    <string name="TextoTipoHielo4">Abomasnow es un Pokémon de tipo planta/hielo introducido en la cuarta generación. Es la evolución de Snover, a partir de la sexta generación puede megaevolucionar en Mega-Abomasnow.</string>
    <string name="TextoTipoHielo5">Glaceon es un Pokémon de tipo hielo introducido en la cuarta generación. Es una de las ocho Eeveeluciones, es decir, las posibles evoluciones de Eevee.7 feb 2022</string>
    <string name="TextoTipoHielo6">ES: Hydreigon, el Pokémon voraz y forma evolucionada de Zweilous. Hydreigon cree que cualquier cosa que se mueve es su oponente y ataca ferozmente con sus tres cabezas. HA: Hydreigon, el Pokémon brutal y la forma evolucionada de Zweilous.</string>
    <string name="TextoTipoSiniestro1">Pokémon legendario que, al extender sus alas y las plumas de la cola, emite un brillo carmesí que absorbe la energía vital de su enemigo.</string>
    <string name="TextoTipoSiniestro2">Zarude está basado en un macaco crestado, aunque posee rasgos de mono araña de cabeza negra, así como de lémur negro macho. Cuando lucha, se mueve ayudándose de los árboles y las ramas y utiliza sus afiladas garras o cualquier cosa que tenga a mano para atacar.1 oct 2021</string>
    <string name="TextoTipoSiniestro3">Tyranitar tiene una fuerza imponente; es capaz de echar abajo una montaña para hacer su nido. Este Pokémon suele merodear por las zonas de montaña en busca de nuevos rivales contra los que luchar. Es un pokémon fiero que lanza rayos por la boca y provoca desprendimientos.</string>
    <string name="TextoTipoSiniestro4">Darkrai es el guardián de la oscuridad, y su función es vigilar que la fuerza de la Oscuridad no se desequilibre con la de la luz (que equilibra Cresselia, su rival), se escondió entre la oscuridad tras crear la luz. En el anime, la Pokédex lo define como el Pokémon más oscuro de todos.</string>
</resources>