<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Morado"
    tools:context=".PokeTipoAgua">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="439dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:background="@color/MoradoMedio"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="7dp"
        android:text="@string/LtAgu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bRegresarEstadosMich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/MoradoMedio"
        android:text="REGRESAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/bLugarDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/MoradoClaro"
        android:paddingTop="5dp"
        android:text="@string/TipoPokeAgu2"
        android:textAlignment="center"
        app:icon="@drawable/perroagua"
        app:iconGravity="textTop"
        app:iconPadding="15dp"
        app:iconSize="125dp"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bLugarUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/MoradoClaro"
        android:paddingTop="5dp"
        android:text="@string/TipoPokeAgu1"
        android:textAlignment="center"
        app:icon="@drawable/ballena"
        app:iconGravity="textTop"
        app:iconPadding="15dp"
        app:iconSize="125dp"
        app:iconTintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bLugarTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/MoradoClaro"
        android:paddingTop="5dp"
        android:text="@string/TipoPokeAgu3"
        android:textAlignment="center"
        app:icon="@drawable/krokodile"
        app:iconGravity="textTop"
        app:iconPadding="15dp"
        app:iconSize="125dp"
        app:iconTintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLugarUno"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bLugarCuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/MoradoClaro"
        android:paddingTop="5dp"
        android:text="@string/TipoPokeAgu4"
        android:textAlignment="center"
        app:icon="@drawable/rana"
        app:iconGravity="textTop"
        app:iconPadding="15dp"
        app:iconSize="125dp"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLugarDos" />

    <Button
        android:id="@+id/bLugarSeis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/MoradoClaro"
        android:paddingTop="5dp"
        android:text="@string/TipoPokeAgu6"
        android:textAlignment="center"
        app:icon="@drawable/lapras"
        app:iconGravity="textTop"
        app:iconPadding="15dp"
        app:iconSize="125dp"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLugarCuatro" />

    <Button
        android:id="@+id/bLugarCinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/MoradoClaro"
        android:paddingTop="5dp"
        android:text="@string/TipoPokeAgu5"
        android:textAlignment="center"
        app:icon="@drawable/sharpedo"
        app:iconGravity="textTop"
        app:iconPadding="15dp"
        app:iconSize="125dp"
        app:iconTintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLugarTres" />

</androidx.constraintlayout.widget.ConstraintLayout>